[tool.poetry]
name = "ariadne-django-cache"
version = "0.1.0"
description = ""
authors = ["Dulmandakh <dulmandakh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
ariadne = "^0.13.0"
Django = "^3.2.7"
nox = "^2021.6.12"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
